# wyas

./: README.md  asdf.wys  wyas.cabal
app/: Main.hs
src/: Eval.hs  LispError.hs  LispVal.hs  LolEval.hs  Parser.hs  Wyas.hs
src/Wyas/: Eval.hs  LispVal.hs  Parser.hs  Pretty.hs
test/: DocTest.hs  EvalSpec.hs  LolEvalSpec.hs  ParserSpec.hs  Spec.hs
test/Examples/: map.wyas
test/Wyas/: EvalSpec.hs
