name:                wyas
version:             0.1.0.0
synopsis:            Write Yourself a Scheme!
description:         Please see README.md
homepage:            http://github.com/parsonsmatt/wyas#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           Matt Parsons
category:            Web
build-type:          Simple
cabal-version:       >=1.18

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Wyas
                     , LolEval
                     , Wyas.Parser
                     , Wyas.LispVal
                     , Wyas.Pretty
                     , Wyas.Eval
  build-depends:       base >= 4.8 && < 5
                     , parsec
                     , containers
                     , wl-pprint
                     , mtl
  default-language:    Haskell2010

executable wyas-repl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wyas
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DocTest.hs
  build-depends:       base
                     , doctest
                     , Glob
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite wyas-test
  type:                exitcode-stdio-1.0
  other-modules:       ParserSpec
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parsec
                     , wyas
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/parsonsmatt/wyas
